--- a/app/directives/filtered_device_list/filtered_device_list.html
+++ b/app/directives/filtered_device_list/filtered_device_list.html
@@ -1,6 +1,7 @@
 <table class="table" width="100%">
     <!-- set columns widths -->
-    <col style="width:5%">
+    <!--
+    <col style="width:120px;">
     <col style="width:10%">
     <col style="width:10%">
     <col style="width:10%">
@@ -10,8 +11,9 @@
     <col style="width:5%">
     <col style="width:20%">
     <col style="width:20%">
+    -->
     <tr ng-show="devices.length==0">
-        <td style="vertical-align:middle; "><i class="fa fa-ban fa-3x "></i>&nbsp;No data found</td>
+        <td style="vertical-align:middle; "><i class="fa fa-ban fa-3x"></i>&nbsp;No data found</td>
     </tr>
     <tr ng-hide="devices.length>-1">
         <td style="vertical-align:middle;"><i class="fa fa-cog fa-3x fa-spin"></i>&nbsp;Loading</td>
@@ -127,21 +129,21 @@
     </tr>
     <!-- (filtered) list with devices -->
     <tr ng-repeat="c in devices | filter:filterOnStatus(filteredStatus) | filter:filters | filter:filterDevices | orderBy:'boxid'" id="{{c.boxid}}" animate-on-change='c.boxid + c.brand + c.model + c.os + c.osversion + c.screensize + c.type + c.statusobject.status' ng-animate="'animate'" ng-class="{'red-opacity-025': deviceConstraintViolation(c, filteredStatus)}">
-        <td>{{c.boxid}}</td>
-        <td>{{c.brand}}</td>
-        <td>{{c.model}}</td>
-        <td>{{c.os}}</td>
-        <td>{{c.osversion}}</td>
-        <td>{{c.screensize}}</td>
-        <td>
+        <td class="col-md-1">{{c.boxid}}</td>
+        <td class="col-md-1">{{c.brand}}</td>
+        <td class="col-md-2">{{c.model}}</td>
+        <td class="col-md-1">{{c.os}}</td>
+        <td class="col-md-1">{{c.osversion}}</td>
+        <td class="col-md-1">{{c.screensize}}</td>
+        <td class="col-md-1">
             <i class="fa fa-mobile fa-2x" aria-hidden="true" title="{{c.type}}" ng-if="isSmartphone(c)"></i>
             <i class="fa fa-tablet fa-2x" aria-hidden="true" title="{{c.type}}" ng-if="isTablet(c)"></i>
         </td>
-        <td>
+        <td class="col-md-1">
             <button class="btn btn-devicestatus" ng-class="{available:'btn-success', inuse:'btn-danger', locked:'btn-info'}[c.statusobject.status]">{{formatStatus(c.statusobject.status)}}</button>
         </td>
-        <td>{{c.statusobject.userobject.fullname}}</td>
-        <td style="width:200px">
+        <td class="col-md-2">{{c.statusobject.userobject.fullname}}</td>
+        <td class="col-md-1">
             <div ng-if="isAdministrator()==false">
                 <!-- My Devices I'm USING could be RETURNed : -->
                 <button type="button" class="btn btn-primary btn-sm" ng-show="isInUse(filteredStatus) && isInUse(c.statusobject.status)" ng-click="returnDevice(c);">Return</button>
